tdf#131098 oox import: apply fill properties to graphic

The fill properties picked up by oox import
were not being transferred to the final graphic.

For some reason, the shape didn't import at all
if I copied over the Fill*Name properties.

All these are importing (at least at a basic level):
- bitmap
- hatch
- solid color
- transparency (unit test)

make CppunitTest_sw_ooxmlexport21 \
    CPPUNIT_TEST_NAME=testTdf131098_imageFill

Change-Id: Ia891db8059c33132a75bef2c4922205315b7ecaf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168127
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins